# digest-sip_hash

./: .gitignore  Gemfile  LICENSE  README.md  Rakefile  digest-sip_hash.gemspec
.github/workflows/: ci.yml
bench/: comparison_bench.rb  helper.rb  runner.rb
ext/digest_sip_hash_native/: Cargo.toml  extconf.rb
ext/digest_sip_hash_native/core/: Cargo.toml
ext/digest_sip_hash_native/core/benches/: siphash_bench.rs
ext/digest_sip_hash_native/core/src/: lib.rs
ext/digest_sip_hash_native/core/tests/: lib.rs
ext/digest_sip_hash_native/ffi/: Cargo.toml  build.rs
ext/digest_sip_hash_native/ffi/src/: lib.rs
lib/digest/: sip_hash.rb
lib/digest/sip_hash/: version.rb
snap/: snapcraft.yaml
spec/: cli_spec.rb  helper.rb  lib_spec.rb  native_spec.rb  runner.rb
