[workspace]
members = ["core", "ffi"]
resolver = "2"

[workspace.dependencies]
digest-sip-hash-core = { path = "./core" }

[workspace.lints.clippy]
# Clippy lint groups
cargo = { level = "deny", priority = -1 }
correctness = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
style = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }

# Clippy nursery group allows
redundant_pub_crate = "allow"
missing_const_for_fn = "allow"

# Clippy cargo group allows
cargo_common_metadata = "allow"
multiple_crate_versions = "allow"

# Clippy pedantic group allows (common patterns in this codebase)
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
module_name_repetitions = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"

# Clippy restriction lints (cherry-picked for security & correctness)
boxed_local = "deny"
clone_on_copy = "deny"
cognitive_complexity = "deny"
panic = "deny"
print_stdout = "deny"
print_stderr = "deny"
unwrap_used = "deny"
todo = "deny"
unimplemented = "deny"
undocumented_unsafe_blocks = "deny"
multiple_unsafe_ops_per_block = "deny"
indexing_slicing = "deny"
allow_attributes_without_reason = "deny"

[workspace.lints.rust]
# Rust lint groups
future_incompatible = "deny"
let_underscore = "deny"
nonstandard_style = "deny"
rust_2018_compatibility = "deny"
rust_2018_idioms = "deny"
rust_2021_compatibility = "deny"
rust_2024_compatibility = "deny"
unused = "deny"

# Rust lints (not covered by groups above)
single_use_lifetimes = "deny"
trivial_casts = "deny"
trivial_numeric_casts = "deny"
unreachable_pub = "deny"

# Safety: deny unsafe code (works with clippy's undocumented_unsafe_blocks above)
unsafe_code = "deny"
